src/assets/css/card.css
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

img {
  width: 270px;
  height: 160px;
  object-fit: cover;
  border-radius: 5px;
}

.rating {
  text-align: justify;
  color: orange;
  font-weight: bold;
  margin-right: 5px;
}

.filter-chip {
  float: left;
  margin-bottom: 5px !important;
  margin-right: 5px !important;
}

